@@ -21,7 +21,6 @@ import com.sparta.doguin.notification.slack.SlackEventClass;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -33,10 +32,8 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.sparta.doguin.domain.attachment.constans.AttachmentTargetType.BULLETIN;
-import static com.sparta.doguin.domain.attachment.constans.AttachmentTargetType.OUTSOURCING;
 
 @Service
 @RequiredArgsConstructor
@@ -91,6 +88,11 @@ public class BulletinService implements BoardService {
     @Override
     @Transactional
     public void update(User user,Long boardId, BoardCommonRequest boardRequest,List<MultipartFile> files) {
+        System.out.println(boardId);
+        System.out.println(boardRequest.content());
+        for ( Long filePath : boardRequest.fileIds() ) {
+            System.out.println(filePath);
+        }
         Board board = boardRepository.findById(boardId)
                 .orElseThrow(() -> new HandleNotFound(ApiResponseBoardEnum.BULLETIN_NOT_FOUND));
 
@@ -100,6 +102,7 @@ public class BulletinService implements BoardService {
         if (board.getBoardType() != boardType) {
             throw new InvalidRequestException(ApiResponseBoardEnum.BULLETIN_WRONG);
         }
+        attachmentUpdateService.update(files,boardRequest.fileIds(),user);
         board.update(boardRequest.title(), boardRequest.content()); // 업데이트 정보 null 처리
 
     }
@@ -220,6 +223,7 @@ public class BulletinService implements BoardService {
      * @since 1.0
      * @author 김창민
      */
+    @Override
     public Page<Long> viewPopular(int page, int size){
         Pageable pageable = PageRequest.of(page - 1, size);
         Set<Long> popularBoardIds = popularService.viewPopularBoardList();
@@ -230,8 +234,7 @@ public class BulletinService implements BoardService {
         }
 
         // 인기 게시물 ID를 리스트로 변환
-        List<Long> popularBoardIdList = popularBoardIds.stream().collect(Collectors.toList());
-        log.info(String.valueOf(popularBoardIdList.size()));
+        List<Long> popularBoardIdList = popularBoardIds.stream().toList();
 
         // 페이지 처리
         int start = Math.min((page-1) * size, popularBoardIdList.size());
